치아교정부분까지 css 전부수정완료

--- a/src/main/webapp/css/clientCommon.css
+++ b/src/main/webapp/css/clientCommon.css
@@ -110,7 +110,7 @@ section {
 /* i?A“eA¸A’ i?a?￢i?A´i?a?￢ */
 .sub-page-title {
     font-size: 42px;
-    font-weight: bold;
+    font-weight: 400;
     margin-bottom: 26px;
     margin-top: 71px;
     text-align: center;
@@ -162,10 +162,11 @@ section {
 
 .section-title-color {
     color: #9b8b7e;
+    font-weight: 500;
 }
 
 .section-text {
-    font-size: 17px;
+    font-size: 16px;
     color: #222;
     line-height: 27px;
     letter-spacing: -1.5px;
@@ -173,7 +174,7 @@ section {
 }
 
 .section-text strong {
-    font-weight: bold;
+    font-weight: 500;
 }
 
 .max-layout-width {
@@ -187,7 +188,7 @@ section {
 }
 
 .bold {
-    font-weight: bold;
+    font-weight: 500;
 }
 
 .display-inline-block {
@@ -288,9 +289,10 @@ a {
     font-size: 67px;
     line-height: 80px;
     color: #eee;
-    font-weight: 600;
+    font-weight: 500;
     margin-bottom: 59px;
     bottom: 0;
+    letter-spacing: 2px;
     font-family: Anton !important;
 }
 
@@ -345,9 +347,9 @@ strong {
 }
 
 .treatment-case .max-layout-width .text h2 {
-    font-size: 32px;
+    font-size: 37px;
     color: #fff;
-    margin-bottom: 40px;
+    margin-bottom: 29px;
     /* font-weight: bold; */
     letter-spacing: -2.5px;
 }
@@ -357,6 +359,7 @@ strong {
     word-break: keep-all;
     letter-spacing: -1px;
     margin-bottom: 56px;
+    font-weight: 300;
 }
 
 .treatment-case .treatment-case-swiper-slide {
@@ -521,11 +524,8 @@ section.board-link ul li {
     width: 35px;
     height: 35px;
     bottom: -6px;
-<<<<<<< HEAD
 }
 
 .header-banner-slider-continer01 img {
     width: 100%;
-=======
->>>>>>> 509b78cb10fe880e75778f512ba7b830213ce32f
 }
