--- a/src/main/webapp/css/clientSubNav.css
+++ b/src/main/webapp/css/clientSubNav.css
@@ -6,14 +6,14 @@
     position: relative;
     background-size: cover;
     box-sizing: border-box;
-    padding-top: 80px;
+    padding-top: 104px;
     height: 100%;
 }
 
 .sub-image h2 {
     font-size: 38px;
     color: #fff;
-    font-weight: bold;
+    font-weight: 500;
     letter-spacing: -2px;
 }
 
@@ -23,9 +23,10 @@
 }
 
 .sub-image p {
-    font-size: 15px;
+    font-size: 16px;
     color: #fff;
-    letter-spacing: -1.5px;
+    letter-spacing: -1px;
+    line-height: 16px;
 }
 
 .sub nav {
@@ -127,7 +128,7 @@
 }
 
 .sub-image {
-    height: 322px;
+    height: 379px;
     background-size: cover;
     background-position: center;
 }
