--- a/src/main/webapp/css/info/staff.css
+++ b/src/main/webapp/css/info/staff.css
@@ -80,11 +80,11 @@
 }
 
 .doctor-title {
-    font-size: 35px;
+    font-size: 34px;
     font-width: bold;
     color: #222;
-    margin-bottom: 79px;
-    font-weight: 600;
+    margin-bottom: 48px;
+    font-weight: 500;
     letter-spacing: -1px;
 }
 
@@ -245,7 +245,7 @@ p + .dec-title {
     padding-top: 57px;
     margin-bottom: 50px;
     font-size: 31px;
-    font-weight: bold;
+    font-weight: 500;
     letter-spacing: -1.5px;
 }
 
@@ -257,6 +257,7 @@ p + .dec-title {
     word-break: keep-all;
     letter-spacing: -1px;
     position: relative;
+    color: #333;
 }
 
 .staff-info {
