--- a/src/main/webapp/css/orthodontics/growthReriodOrthodontics.css
+++ b/src/main/webapp/css/orthodontics/growthReriodOrthodontics.css
@@ -26,7 +26,7 @@
     margin-top: 43px;
     background: #f5f5f5;
     padding-top: 31px;
-    padding-bottom: 37px;
+    padding-bottom: 68px;
 }
 
 .section01 .section-text {
@@ -49,7 +49,7 @@
 }
 
 .section02 {
-    margin-top: 79px;
+    margin-top: 88px;
 }
 
 .section02 .max-layout-width .text {
@@ -73,7 +73,7 @@
 
 .section02 .section-title {
     position: relative;
-    line-height: 1.3;
+    line-height: 1.2;
     margin-bottom: 4px;
     letter-spacing: -3px;
     text-align: center;
@@ -86,7 +86,7 @@
     position: relative;
     text-align: center;
     padding-left: 47px;
-    padding-top: 20px;
+    padding-top: 11px;
     padding-right: 21px;
 }
 
@@ -105,7 +105,7 @@
 }
 
 .section02 ul {
-    padding-top: 65px;
+    padding-top: 57px;
     box-sizing: border-box;
     margin-left: -2%;
 }
@@ -134,7 +134,7 @@
 }
 
 .section02 .text li p {
-    line-height: 1.6;
+    line-height: 1.4;
     color: #222;
     letter-spacing: -1.2px;
 }
@@ -178,7 +178,7 @@
 }
 
 .section04 {
-    margin-top: 77px;
+    margin-top: 117px;
 }
 
 .section04 .max-layout-width .text {
@@ -358,10 +358,10 @@
 }
 
 .section03 {
-    margin-top: 106px;
+    margin-top: 47px;
     background: #0c1534;
     padding-top: 201px;
-    padding-bottom: 172px;
+    padding-bottom: 150px;
 }
 
 .section03 .section-title {
@@ -408,7 +408,7 @@
     position: relative;
     padding-left: 40px;
     display: inline-block;
-    font-weight: bold;
+    font-weight: 400;
     cursor: pointer;
     letter-spacing: -1px;
 }
@@ -440,5 +440,5 @@
 }
 
 .section07 {
-    margin-top: 141px;
+    margin-top: 170px;
 }
