--- a/src/main/webapp/css/orthodontics/malocculusionOrthodontics.css
+++ b/src/main/webapp/css/orthodontics/malocculusionOrthodontics.css
@@ -26,7 +26,7 @@
     margin-top: 43px;
     background: #f5f5f5;
     padding-top: 24px;
-    padding-bottom: 110px;
+    padding-bottom: 170px;
 }
 
 .section01 .section-text {
@@ -51,8 +51,8 @@
 
 
 .section05 {
-    height: 357px;
-    margin-top: 111px;
+    height: 418px;
+    margin-top: 167px;
 }
 
 .section05 .max-layout-width {
@@ -63,12 +63,12 @@
 }
 
 .section05 .max-layout-width .text {
-    padding-top: 99px;
+    padding-top: 131px;
     text-align: center;
 }
 
 .tab-contents3 .section05 .max-layout-width .text {
-    padding-top: 74px;
+    padding-top: 107px;
 }
 
 
@@ -142,7 +142,7 @@
 
 
 .section04 {
-    margin-top: 37px;
+    margin-top: 88px;
 }
 
 .section04 .section-title {
@@ -203,7 +203,7 @@ p.img.toothimg05{
     position: relative;
     padding-left: 32px;
     display: inline-block;
-    font-weight: bold;
+    font-weight: 500;
     position: relative;
     letter-spacing: -1.5px;
 }
@@ -319,7 +319,7 @@ p.img.toothimg05{
 
 .section02 {
     text-align: center;
-    padding-top: 78px;
+    padding-top: 88px;
 }
 
 .section02 .section-title {
@@ -341,9 +341,9 @@ p.img.toothimg05{
 }
 
 .section02 li p {
-    line-height: 1.55;
+    line-height: 1.3;
     font-size: 17px;
-    font-weight: bold;
+    font-weight: 500;
     color: #222;
     margin-top: 13px;
     letter-spacing: -1px;
@@ -377,7 +377,7 @@ p.img.toothimg05{
 .section03 {
     padding: 69px 0 63px 0;
     background: #f3f3f3;
-    margin-top: 75px;
+    margin-top: 92px;
 }
 
 .section03 .section-title {
@@ -388,6 +388,7 @@ p.img.toothimg05{
 .section03 .section-text {
     text-align: center;
     margin-bottom: 70px;
+    color: #666;
 }
 
 .section03 .max-layout-width .con {
@@ -441,14 +442,14 @@ p.img.toothimg05{
 .section03 .max-layout-width .con .img-box h2 {
     margin: 30px 0;
     font-size: 30px;
-    font-weight: bold;
+    font-weight: 500;
     text-align: center;
     letter-spacing: -2px;
 }
 
 .section03 .max-layout-width .con .img-box p {
     text-align: center;
-    line-height: 1.65;
+    line-height: 1.5;
     letter-spacing: -1px;
 }
 
@@ -459,13 +460,14 @@ p.img.toothimg05{
 
 .section03 .text ul {
     text-align: right;
+    padding-top: 76px;
 }
 
 .section03 .text li {
-    height: 107px;
+    height: 88px;
     max-width: 590px;
     width: 100%;
-    line-height: 110px;
+    line-height: 88px;
     padding-left: 34px;
     box-sizing: border-box;
     background: #fff;
@@ -492,8 +494,8 @@ p.img.toothimg05{
 }
 
 .section03 .text li span {
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 23px;
+    font-weight: 500;
     margin-right: 24px;
     display: inline-block;
     float: left;
@@ -501,20 +503,21 @@ p.img.toothimg05{
 }
 
 .section06 {
-    margin-top: 77px;
+    margin-top: 88px;
 }
 
 .section06 .section-title {
-    line-height: 1.3;
-    margin-bottom: 20px;
+    line-height: 1.2;
+    margin-bottom: 14px;
 }
 
 .section06 .section-text {
-    line-height: 1.7;
+    line-height: 1.5;
     width: 50%;
     word-break: keep-all;
     margin-bottom: 50px;
     letter-spacing: -1.2px;
+    color: #666;
 }
 
 .section06 ul {
@@ -535,8 +538,8 @@ p.img.toothimg05{
 
 .section06 ul li p {
     text-align: center;
-    font-weight: bold;
-    font-size: 19px;
+    font-weight: 500;
+    font-size: 17px;
     letter-spacing: -1.5px;
 }
 
@@ -617,8 +620,8 @@ p.img.toothimg07 .img {
 }
 
 .section09 li p {
-    line-height: 1.6;
-    font-weight: bold;
+    line-height: 1.5;
+    font-weight: 500;
     text-align: center;
     margin-top: 27px;
     letter-spacing: -1.3px;
