--- a/src/main/webapp/css/orthodontics/partialOrthodontics.css
+++ b/src/main/webapp/css/orthodontics/partialOrthodontics.css
@@ -50,8 +50,8 @@
 
 
 .section03 {
-    height: 350px;
-    margin-top: 80px;
+    height: 415px;
+    margin-top: 88px;
 }
 
 .section03 .max-layout-width {
@@ -62,7 +62,7 @@
 }
 
 .section03 .max-layout-width .text {
-    padding-top: 111px;
+    padding-top: 138px;
 }
 
 .section03 .max-layout-width .text h2 {
@@ -92,7 +92,7 @@
 }
 
 .section04 {
-    margin-top: 67px;
+    margin-top: 111px;
 }
 
 .section04 .section-title {
@@ -138,7 +138,7 @@
     position: relative;
     padding-left: 40px;
     display: inline-block;
-    font-weight: bold;
+    font-weight: 500;
     /* cursor: pointer; */
     letter-spacing: -1px;
 }
@@ -176,7 +176,7 @@
 
 
 .section05 {
-    margin-top: 120px;
+    margin-top: 156px;
 }
 
 .section05 .max-layout-width .text {
@@ -344,9 +344,9 @@
 }
 
 .section02 li p {
-    line-height: 1.55;
+    line-height: 1.3;
     font-size: 17px;
-    font-weight: bold;
+    font-weight: 500;
     color: #222;
     margin-top: -4px;
     letter-spacing: -1px;
@@ -376,5 +376,5 @@
 }
 
 .section06 {
-    margin-top: 148px;
+    margin-top: 166px;
 }
