--- a/src/main/webapp/lib/fade-slider/slider.css
+++ b/src/main/webapp/lib/fade-slider/slider.css
@@ -86,7 +86,7 @@
     position: absolute;
     top: 0;
     height: 100%;
-    background: rgba(139,125,114, 0.8);
+    background: rgba(139,125,114, 0.95);
     opacity: 0;
 }
 
@@ -229,7 +229,9 @@
 
 /* left-fade-slider-container */
 .left-fade-slider-container {
-    margin-top: 184px;
+    margin-top: 218px;
+    background: #f5f5f5;
+    padding-top: 112px;
 }
 
 
@@ -298,7 +300,7 @@
 
 .left-fade-slider-container .slider-container {
     width: 1300px;
-    height: 420px;
+    height: 408px;
     margin: 0 auto;
 }
 
@@ -316,7 +318,7 @@
 .left-fade-slider-container .text h2 {
     margin-top: 80px;
     font-size: 23px;
-    font-weight: bold;
+    font-weight: 500;
     text-align: center;
     color: #fff;
     margin-bottom: 23px;
@@ -330,7 +332,7 @@
     color: #fff;
     display: block;
     height: 120px;
-    font-size: 17px;
+    font-size: 16px;
     white-space: initial;
     padding: 0 19px;
     letter-spacing:-1px;
