기능수정: 기타 추가 수정 작업

--- a/src/main/webapp/css/clientCommon.css
+++ b/src/main/webapp/css/clientCommon.css
@@ -522,3 +522,7 @@ section.board-link ul li {
     height: 35px;
     bottom: -6px;
 }
+
+.header-banner-slider-continer01 img {
+    width: 100%;
+}
