--- a/src/main/webapp/css/tooth/general.css
+++ b/src/main/webapp/css/tooth/general.css
@@ -57,12 +57,12 @@
 }
 
 .section04 {
-    margin-top: 59px;
+    margin-top: 92px;
 }
 
 .tab-container3 .section04 {
-    margin-top: 137px;
-    margin-bottom: 159px;
+    margin-top: 168px;
+    margin-bottom: 193px;
 }
 
 .section04 .max-layout-width .text {
@@ -150,8 +150,8 @@
 
 
 .section20 {
-    height: 273px;
-    margin-top: 163px;
+    height: 326px;
+    margin-top: 184px;
     margin-bottom: -19px;
 }
 
@@ -163,14 +163,15 @@
 }
 
 .section20 .max-layout-width .text {
-    padding-top: 82px;
+    padding-top: 125px;
 }
 
 .section20 .max-layout-width .text h2 {
     line-height: 1.45;
     margin-bottom: 50px;
-    font-size: 28px;
+    font-size: 26px;
     letter-spacing: -2px;
+    font-weight: 300;
 }
 
 .section20 .max-layout-width .text p {
@@ -200,8 +201,8 @@
 
 
 .section06 {
-    height: 267px;
-    margin-top: 164px;
+    height: 300px;
+    margin-top: 212px;
     margin-bottom: -92px;
 }
 
@@ -220,8 +221,10 @@
 .section06 .max-layout-width .text h2 {
     line-height: 1.45;
     margin-bottom: 50px;
-    font-size: 27px;
+    font-size: 25px;
     letter-spacing: -2px;
+    font-weight: 300;
+    padding-top: 29px;
 }
 
 .section06 .max-layout-width .text p {
@@ -326,11 +329,13 @@
 
 .section02 .section-title {
     line-height: 1.3;
-    margin-bottom: 1px;
+    margin-bottom: -4px;
 }
 
 .section02 .section-text {
     margin-bottom: 48px;
+    color: #9c9c9c;
+    font-weight: 400;
 }
 
 .section02 .tab ul {
@@ -404,7 +409,7 @@
 
 .section02-1 .tab-contents img + div h2 {
     font-size: 38px;
-    font-weight: bold;
+    font-weight: 500;
     text-align: left;
     margin-bottom: 36px;
     letter-spacing: -2px;
@@ -431,7 +436,7 @@
 }
 
 .section03 {
-    margin-top: 76px;
+    margin-top: 106px;
 }
 
 .section03 h2 {
@@ -448,7 +453,7 @@
 .section03 .table li:first-child  {
     width: 8%;
     text-align: center;
-    font-weight: bold;
+    font-weight: 500;
     font-size: 21px;
     display: table-cell;
     vertical-align: middle;
@@ -526,7 +531,7 @@
 }
 
 .section05 {
-    margin-top: 138px;
+    margin-top: 167px;
     margin-bottom: -76px;
 }
 
@@ -573,7 +578,7 @@
 .section05 .text h2 {
     padding-top: 68px;
     font-size: 34px;
-    font-weight: bold;
+    font-weight: 500;
     margin-bottom: 31px;
     position: relative;
     letter-spacing: -2px;
@@ -609,13 +614,13 @@
 }
 
 .section05 .text li h3 {
-    font-size: 20px;
-    margin-bottom: 14px;
+    font-size: 18px;
+    margin-bottom: 6px;
     color: #d7d6d6;
 }
 
 .section11 {
-    margin-top: 134px;
+    margin-top: 174px;
     margin-bottom: -6px;
 }
 
@@ -670,7 +675,7 @@
     position: relative;
     padding-left: 28px;
     display: inline-block;
-    font-weight: bold;
+    font-weight: 500;
     position: relative;
     letter-spacing: -1px;
 }
@@ -722,7 +727,7 @@
 
 
 .section12 {
-    margin-top: 84px;
+    margin-top: 109px;
     margin-bottom: -17px;
     padding-bottom: 0px;
 }
@@ -778,7 +783,7 @@
     position: relative;
     padding-left: 30px;
     display: inline-block;
-    font-weight: bold;
+    font-weight: 500;
     position: relative;
     letter-spacing: -1px;
 }
@@ -879,22 +884,24 @@
 }
 
 .fade-in-slider {
-    margin-top: 175px;
+    margin-top: 209px;
+    padding-bottom: 24px;
 }
 
 .fade-in-slider .title p {
     font-size: 17px;
-    color: #222;
+    color: #9c9c9c;
     letter-spacing: -1px;
     margin-bottom: 46px;
-    font-weight: 500;
+    font-weight: 400;
 }
 
 .fade-in-slider .swiper-slide .text p {
     width: 320px;
     word-break: keep-all;
     letter-spacing: -1px;
-    font-weight: 500;
+    font-weight: 400;
+    line-height: 1.6;
 }
 
 .fade-in-slider .swiper-slide .text h2 {
@@ -918,14 +925,14 @@
     line-height: 27px;
     letter-spacing: -1px;
     padding-top: 18px;
-    font-weight: 500;
+    font-weight: 400;
 }
 
 .treatment-case .max-layout-width .text p {
     line-height: 1.7;
     word-break: keep-all;
     letter-spacing: -1px;
-    font-weight: 500;
+    font-weight: 400;
 }
 
 
@@ -938,6 +945,14 @@
 
 .left-fade-slider-container {
     margin-top: 101px;
+}
+
+.left-fade-slider-container {
+    margin-top: 21px;
+    background: #f5f5f5;
+    padding-top: 135px;
+    padding-bottom: 158px;
+    margin-bottom: -78px;
 }
 
 .section05 .img-contents {
