--- a/src/main/webapp/css/tooth/wisdom.css
+++ b/src/main/webapp/css/tooth/wisdom.css
@@ -26,7 +26,7 @@
     margin-top: 43px;
     background: #f5f5f5;
     padding-top: 26px;
-    padding-bottom: 184px;
+    padding-bottom: 220px;
 }
 
 .section01 .section-text {
@@ -83,7 +83,7 @@
 .section02 li p {
     line-height: 1.5;
     font-size: 17px;
-    font-weight: bold;
+    font-weight: 500;
     color: #222;
     margin-top: 13px;
     letter-spacing: -1px;
@@ -111,7 +111,7 @@
 }
 
 .section03 {
-    margin-top: 65px;
+    margin-top: 113px;
 }
 
 .section03 .max-layout-width .text {
@@ -202,7 +202,7 @@
 
 .section04 ul li h3 {
     font-size: 25px;
-    font-weight: bold;
+    font-weight: 500;
     margin-bottom: 17px;
     letter-spacing: -2px;
 }
@@ -210,7 +210,7 @@
 .section04 ul li p {
     text-align: center;
     font-size: 16px;
-    line-height: 1.6;
+    line-height: 1.5;
     width: 320px;
     margin: 0 auto;
     color: #4f4f4f;
@@ -218,7 +218,7 @@
 }
 
 .section04 {
-    margin-top: 135px;
+    margin-top: 176px;
     text-align: center;
     margin-bottom: 92px;
 }
@@ -308,7 +308,7 @@
 }
 
 .section09 {
-    margin-top: 104px;
+    /* margin-top: 104px; */
 }
 
 .left-fade-slider-container .bg {
@@ -318,5 +318,5 @@
 }
 
 .left-fade-slider-container {
-    margin-top: 94px;
+    margin-top: 109px;
 }
