배경 색 변경 및 체크 표시 아이콘 추가

--- a/src/main/webapp/css/clientCommon.css
+++ b/src/main/webapp/css/clientCommon.css
@@ -529,3 +529,14 @@ section.board-link ul li {
 .header-banner-slider-continer01 img {
     width: 100%;
 }
+
+.list-content .pager.active span {
+    display: block;
+    left: 0;
+    font-weight: bold;
+    font-size: 20px;
+    top: 1px;
+    background: url(../images/sub/orthodontics/grow/check_small.png);
+    width: 28px;
+    height: 24px;
+}
