--- a/src/main/webapp/css/info/competitiveness.css
+++ b/src/main/webapp/css/info/competitiveness.css
@@ -195,7 +195,7 @@ section {
 .section03 {
     margin-top: 107px;
     padding-bottom: 126px;
-    background: #0c1534;
+    background: #1f2742;
     color: #fff;
     padding-top: 130px;
     margin-bottom: 125px;
