--- a/src/main/webapp/css/info/intro.css
+++ b/src/main/webapp/css/info/intro.css
@@ -221,7 +221,7 @@ section {
     margin-top: 2px;
     padding-top: 96px;
     padding-bottom: 90px;
-    background: #0c1534;
+    background: #1f2742;
 }
 
 .container {
