--- a/src/main/webapp/css/orthodontics/growthReriodOrthodontics.css
+++ b/src/main/webapp/css/orthodontics/growthReriodOrthodontics.css
@@ -359,7 +359,7 @@
 
 .section03 {
     margin-top: 47px;
-    background: #0c1534;
+    background: #1f2742;
     padding-top: 201px;
     padding-bottom: 150px;
 }
