--- a/src/main/webapp/css/tooth/wisdom.css
+++ b/src/main/webapp/css/tooth/wisdom.css
@@ -62,22 +62,24 @@
 
 .section02 ul {
     overflow: hidden;
+    margin-left: -2%;
 }
 
 .section02 li {
-    width: 25%;
+    width: 23%;
     float: left;
     padding-top: 25px;
     padding-bottom: 31px;
+    margin-left: 2%;
 }
 
 .section02 li {
-    border-right: 1px solid #c6c6c6;
+    border: 1px solid #c6c6c6;
     box-sizing: border-box;
 }
 
 .section02 li:first-child {
-    border-left: 1px solid #c6c6c6;
+    /* border-left: 1px solid #c6c6c6; */
 }
 
 .section02 li p {
@@ -319,4 +321,9 @@
 
 .left-fade-slider-container {
     margin-top: 109px;
+}
+
+
+.post-slider .text h2 {
+    padding-top: 10px;
 }
