--- a/src/main/webapp/lib/fade-slider/slider.css
+++ b/src/main/webapp/lib/fade-slider/slider.css
@@ -316,7 +316,7 @@
 }
 
 .left-fade-slider-container .text h2 {
-    margin-top: 80px;
+    margin-top: 83px;
     font-size: 23px;
     font-weight: 500;
     text-align: center;
@@ -371,7 +371,7 @@
 
 .fade-in-slider .swiper-slide .text h2 {
     line-height: 1.3;
-    margin-bottom: 35px;
+    margin-bottom: 25px;
     font-size: 33px;
     letter-spacing: -2.3px;
 }
@@ -380,6 +380,7 @@
     width: 320px;
     word-break: keep-all;
     letter-spacing: -1px;
+    line-height: 25px;
 }
 
 .fade-in-slider .image_box_right {
@@ -526,7 +527,7 @@
 .text-slider .slider-arrow span {
     display: inline-block;
     float: left;
-    width: 50%;
+    width: 55px;
     background: #9b8b7e;
     height: 53px;
     line-height: 51px;
@@ -534,13 +535,26 @@
     font-size: 40px;
     box-sizing: border-box;
     cursor: pointer;
+    text-indent: -9999px;
+}
+
+.text-slider .slider-arrow .slider-prev:before {
+    position: absolute;
+    content: '';
+    width: 1px;
+    height: 100%;
+    background: #d1c9c3;
+    top: 0;
+    right: 0;
 }
 
 .text-slider .slider-arrow .slider-prev {
     padding-left: 20px;
-
+    background: #9b8b7e url(../../images/sub/implant/cmmn/left_slider.png) no-repeat center;
+    position: relative;
 }
 
 .text-slider .slider-arrow .slider-next {
     padding-right: 20px;
+    background: #9b8b7e url(../../images/sub/implant/cmmn/right_slider.png) no-repeat center;
 }
