--- a/src/main/webapp/css/info/diagnosticEquipmentSystem.css
+++ b/src/main/webapp/css/info/diagnosticEquipmentSystem.css
@@ -344,7 +344,7 @@
     position: absolute;
     z-index: 2;
     top: 42px;
-    width: 51%;
+    width: 41%;
 }
 
 
@@ -358,7 +358,7 @@
 }
 
 .section03 .max-layout-width {
-    padding-left: 50%;
+    padding-left: 920px;
     box-sizing: border-box;
 }
 
