--- a/src/main/webapp/css/clientSubNav.css
+++ b/src/main/webapp/css/clientSubNav.css
@@ -103,8 +103,10 @@
 
 .breadcrumb ul li:first-child {
     width: 63px;
-    text-indent: -999px;
+    text-indent: -9999px;
     background: url(../images/cmmn/icon_home.png) no-repeat center top;
+    cursor: pointer;
+    position: relative;
 }
 
 .breadcrumb ul li a {
@@ -112,11 +114,24 @@
     width: 100%;
     height: 100%;
     display: inline-block;
+    position: relative;
 }
 
 .breadcrumb ul li a.category {
     width: 118px;
     letter-spacing: -1px;
+    position: relative;
+    text-align: center;
+}
+
+.breadcrumb ul li a.category:before, .breadcrumb ul li:first-child:before {
+    content: '';
+    position: absolute;
+    width: 7px;
+    height: 12px;
+    background: url(../images/cmmn/arrow.png);
+    right: 0;
+    top: 3px;
 }
 
 .breadcrumb ul li a.category-url {
