--- a/src/main/webapp/css/info/competitiveness.css
+++ b/src/main/webapp/css/info/competitiveness.css
@@ -1,3 +1,16 @@
+@font-face {
+    font-family: 'Caveat';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../../fonts/caveat/caveat-v8-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local('Caveat Regular'), local('Caveat-Regular'),
+    url('../../fonts/caveat/caveat-v8-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../../fonts/caveat/caveat-v8-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../../fonts/caveat/caveat-v8-latin-regular.woff') format('woff'), /* Modern Browsers */
+    url('../../fonts/caveat/caveat-v8-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('../../fonts/caveat/caveat-v8-latin-regular.svg#Caveat') format('svg'); /* Legacy iOS */
+}
+
 section {
     position: relative;
 }
@@ -38,6 +51,7 @@ section {
     margin-bottom: 32px;
     font-size: 15px;
     color: #998b82;
+    font-family: Caveat !important;
 }
 
 .section01 .text h6 + div:before {
