--- a/src/main/webapp/css/tooth/general.css
+++ b/src/main/webapp/css/tooth/general.css
@@ -446,33 +446,34 @@
     letter-spacing: -2px;
 }
 
-.section03 .table ul {
+.section03 .table tr {
     overflow: hidden;
 }
 
-.section03 .table li:first-child  {
+.section03 .table td:first-child  {
     width: 8%;
     text-align: center;
     font-weight: 500;
     font-size: 21px;
-    display: table-cell;
     vertical-align: middle;
-    border-top: 1px solid #8f8f8f;
-    border-right: 1px solid #8f8f8f;
     box-sizing: border-box;
     letter-spacing: -2px;
 }
 
-.section03 .table li  {
+.section03 .table td  {
     width: 23%;
-    float: left;
+    border: 1px solid #8f8f8f;
+    text-align: center;
+    line-height: 1.5;
+    vertical-align: middle;
+    padding: 20px 0;
 }
 
 .section03 .table img {
     width: 100%;
 }
 
-.section03 .table .table-title li {
+.section03 .table .table-title th {
     font-size: 20px;
     text-align: center;
     color: #fff;
@@ -481,6 +482,7 @@
     height: 57px;
     box-sizing: border-box;
     letter-spacing: -1px;
+    border: 1px solid #8f8f8f;
 }
 
 .section03 .img-col li:first-child {
@@ -1016,4 +1018,8 @@
 
 .tab-container3 .left-fade-slider-container {
     background: #fff;
+}
+
+.section03 .table .img-col td {
+    padding: 0;
 }
